--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "crypto-js": "^4.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-the-mask": "^0.11.1",
