--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fabric-ds/vue": "^0.12.7",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -16,6 +17,8 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "crypto-js": "^4.2.0",
+    "fabric": "^5.3.0",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-the-mask": "^0.11.1",
